testdata/baselines/reference/compiler/jsxNestedIndentation.errors.txt
jsxNestedIndentation(2,1): error TS1128: Declaration or statement expected.
jsxNestedIndentation(3,1): error TS1128: Declaration or statement expected.
jsxNestedIndentation(3,33): error TS1005: ',' expected.
jsxNestedIndentation(3,48): error TS1128: Declaration or statement expected.
jsxNestedIndentation(3,48): error TS1005: ',' expected.
jsxNestedIndentation(3,48): error TS1128: Declaration or statement expected.
jsxNestedIndentation(3,48): error TS1005: ')' expected.

==== jsxNestedIndentation (7 errors) ====
    
    declare var React: any;
    ~~~~~~~
!!! error TS1128: Declaration or statement expected.
    declare function Child(props: { children?: any }): any;
    ~~~~~~~
!!! error TS1128: Declaration or statement expected.
                                    ~~~~~~~~
!!! error TS1005: ',' expected.
                                                   ~
!!! error TS1128: Declaration or statement expected.
                                                   ~
!!! error TS1005: ',' expected.
                                                   ~
!!! error TS1128: Declaration or statement expected.
                                                   ~
!!! error TS1005: ')' expected.
    function Test() {
        return <Child>
            <Child>
                <Child></Child>
            </Child>
        </Child>
    }
    
